2009-01-03  Siavash Safi  <siavash@siavashs.org>

	* clutter-gtk/src/clutter-gtk_methods.defs: Regenerated
	* clutter-gtk/src/Makefile_list_of_hg.am_fragment:
	* clutter-gtk/clutter-gtkmm.h
	* clutter-gtkmm/trunk/clutter-gtk/src/viewport.ccg:
	* clutter-gtkmm/trunk/clutter-gtk/src/viewport.hg: Added Viewport

2008-12-29  Daniel Elstner  <danielk@openismus.com>

	* configure.in: Bump version number to 0.9.0.

2008-12-19  Daniel Elstner  <danielk@openismus.com>

	* configure.in (API_VER): Bump to 0.9.

2008-12-19  Daniel Elstner  <danielk@openismus.com>

	* tests/test-alpha-creation.cc: Adapt to cluttermm API change.
	Also get rid of some cruft.

2008-12-19  Daniel Elstner  <danielk@openismus.com>

	* tools/extra_defs_gen/generate_defs_clutter_gtk.cc: Fix to obey the
	single central header policy of clutter 0.9.
	* clutter-gtk/src/embed.ccg: ditto.

2008-12-19  Daniel Elstner  <danielk@openismus.com>

	* configure.in (CLUTTER_GTKMM): Depend on clutter-0.9 and
	clutter-gtk-0.9.

2008-07-25  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/convert.m4: Mention the correct file to fix the build.

2008-07-25  Murray Cumming  <murrayc@murrayc.com>

	* clutter-gtk/clutter-gtkmm-config.h.in: Corrected the header guard.
	* clutter-gtk/clutter-gtkmm/wrap_init.h: Corrected the namespace
	* tools/m4/Makefile.am:
	* tools/m4/Makefile_list_of_sources.am_fragment:
	* tools/m4/convert_cluttermm.m4: Renamed to convert_clutter-gtkmm.m4

0.7.2:

2008-07-23  Siavash Safi  <siavash.safi@gmail.com>

	* autogen.sh:
	* clutter-cairo/Makefile.am:
	* clutter-cairo/README:
	* clutter-cairo/
	* clutter-gtk/Makefile.am:
	* clutter-gtk/clutter-gtkmm.h:
	* clutter-gtk/clutter-gtkmm.pc.in:
	* clutter-gtk/clutter-gtkmm/Makefile.am:
	* clutter-gtk/clutter-gtkmm/init.cc:
	* clutter-gtk/clutter-gtkmm/init.h:
	* clutter-gtk/clutter-gtkmm/private/Makefile.am:
	* clutter-gtk/clutter-gtkmm/wrap_init.h:
	* clutter-gtk/cluttermm-gtk-config.h.in:
	* clutter-gtk/cluttermm-gtk.h: