@@ -2,3 +2,6 @@
 ## The cluttermm development team.
 
 SUBDIRS = reference
+
+EXTRA_DIST = Makefile_web.am_fragment
+
